<resources>
    <string name="app_name">Antojitos</string>
    <string name="goto_checkout">Ir al checkout</string>
    <string name="menu">Menu</string>
    <string name="add_product">Agregar producto</string>
    <string name="shopping_cart">Carrito</string>
    <string name="your_order">Su orden</string>
    <string name="logo_la_carpita">\"La carpita\" logo</string>
    <string name="product_added">Product added</string>
    <string name="quantity">Cantidad</string>
    <string name="order_total">Total</string>
    <string name="no_product_in_cart">No se han agregado productos al carrito</string>
    <string name="over_max_product_quantity">No se puede agregar más de %1$s</string>
    <string name="place_order">Ordenar</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_info">Datos de envío</string>
    <string name="input_name">Nombre completo</string>
    <string name="input_address">Dirección completa</string>
    <string name="input_phone_number">Número de celular</string>
    <string name="order_placed">Se ha realizado la orden</string>
    <string name="place_order_error">No se pudo realizar la orden por un error interno</string>
    <string name="error_minimum_length_name">Debe tener al menos 6 caracteres</string>
    <string name="error_minimum_length_address">Debe tener al menos 16 caracteres</string>
    <string name="error_minimum_length_phone">Debe tener al menos 8 caracteres</string>

    <plurals name="number_of_products">
        <item quantity="one">%d producto</item>
        <item quantity="other">%d productos</item>
    </plurals>
</resources>
