<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_app"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.brandontm.antojitos.ui.menu.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/menu_fragment" >
        <action
            android:id="@+id/action_menuFragment_to_shoppingCartFragment"
            app:destination="@id/shoppingCartFragment"
            app:enterAnim="@anim/fragment_open_enter" />
    </fragment>
    <fragment
        android:id="@+id/shoppingCartFragment"
        android:name="com.brandontm.antojitos.ui.cart.ShoppingCartFragment"
        android:label="@string/shopping_cart"
        tools:layout="@layout/shopping_cart_fragment" >
        <action
            android:id="@+id/action_shoppingCartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.brandontm.antojitos.ui.checkout.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/checkout_fragment" />
</navigation>